<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogsActivity">

    <TextView
        android:id="@+id/txtLogsDisabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logs_disabled"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEnableLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_save_logs"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/txtLogsDisabled"
        app:layout_constraintStart_toStartOf="@+id/txtLogsDisabled"
        app:layout_constraintTop_toBottomOf="@+id/txtLogsDisabled" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/menu_item_logs" >
            <androidx.appcompat.widget.ActionMenuView
                android:id="@+id/action_menu_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                app:menu="@menu/menu_logs" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/logsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>